removed unecessary custom property declarations, then fixed the overflow of the image slider

--- a/scss/_image_slider.scss
+++ b/scss/_image_slider.scss
@@ -11,7 +11,7 @@
 .image_container {
     display: flex;
     flex-direction: row;
-    overflow: scroll;
+    overflow: auto;
     li:not(:nth-of-type(1)) {
         margin-inline-start: 9px;
     }
