--- a/scss/_section_subscribe.scss
+++ b/scss/_section_subscribe.scss
@@ -1,9 +1,4 @@
 @import "./variables/variables";
-:root {
-    --btn-padding-vertical-start: 13px;
-    --btn-padding-vertical-end: 11px;
-}
-
 .section_subscribe {
     background-color: #FFDD78;
     >div {
